--- a/frontend/style/style.scss
+++ b/frontend/style/style.scss
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: "roboto";
 }
 
 button {
@@ -32,6 +33,7 @@ button {
 
         .list {
             width: 100%;
+
             .todo-item {
                 display: flex;
                 box-sizing: border-box;
@@ -40,6 +42,10 @@ button {
 
                 .todo-button {
                     background-color: rgb(194, 0, 194);
+                }
+
+                .todo-done-button {
+                    background-color: grey;
                 }
 
                 .todo-title {
@@ -55,6 +61,7 @@ button {
 
                 .delete-button {
                     background-color: red;
+                    width: 70px;
                 }
             }
         }
@@ -63,14 +70,20 @@ button {
             margin-top: 10px;
             width: 100%;
             display: flex;
+            box-sizing: border-box;
+
+            padding: 5px 10px;
 
             .create {
                 background-color: rgb(0, 221, 0);
+                width: 70px;
             }
 
             .todo-name {
                 margin-right: 20px;
                 flex-grow: 1;
+                box-sizing: border-box;
+                padding: 3px 5px;
             }
         }
     }
